--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -95,6 +95,9 @@
 					<a href="text/chapter-27.xhtml"><span epub:type="z3998:roman">XXVII</span>: The Assurance</a>
 				</li>
 				<li>
+					<a href="text/loi.xhtml">List of Illustrations</a>
+				</li>
+				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
 				</li>
 				<li>
@@ -113,6 +116,9 @@
 				</li>
 				<li>
 					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">The Charing Cross Mystery</a>
+				</li>
+				<li>
+					<a href="text/loi.xhtml" epub:type="backmatter loi">List of Illustrations</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml" epub:type="backmatter colophon">Colophon</a>
