--- a/src/epub/text/loi.xhtml
+++ b/src/epub/text/loi.xhtml
@@ -11,7 +11,7 @@
 			<h2 epub:type="title">List of Illustrations</h2>
 			<ol>
 				<li>
-					<a href="chapter-9.xhtml#image-1">A medicine bottle with two torn labels and incomplete text reading “C. A. … Esq., The mix … re as before. No. A.1152” on the first label and “Note This medicine has been dispensed by a fully qualified Chemist with the … to possible drugs … and is guaranteed … the wishes of … the Pres- … M.P.S. … St. W.C.” on the second.</a>
+					<a href="chapter-9.xhtml#illustration-1">A medicine bottle with two torn labels and incomplete text reading “<abbr class="name">C. A.</abbr> … <abbr>Esq.</abbr>, The mix … re as before. No. A.1152” on the first label and “Note This medicine has been dispensed by a fully qualified Chemist with the … to possible drugs … and is guaranteed … the wishes of … the Pres- … <abbr class="initialism">M.P.S.</abbr> … <abbr>St.</abbr> <abbr class="initialism">W.C.</abbr>” on the second.</a>
 				</li>
 			</ol>
 		</nav>
