--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -13,7 +13,7 @@
 			</header>
 			<p><i epub:type="se:name.publication.book">The Charing Cross Mystery</i><br/>
 			was published in 1923 by<br/>
-			<a href="https://en.wikipedia.org/wiki/J._S._Fletcher">J. S. Fletcher</a>.</p>
+			<a href="https://en.wikipedia.org/wiki/J._S._Fletcher"><abbr class="name">J. S.</abbr> Fletcher</a>.</p>
 			<p>This ebook was produced for the<br/>
 			<a href="https://standardebooks.org">Standard Ebooks project</a><br/>
 			by<br/>
