--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -23,7 +23,7 @@
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/59893">Project Gutenberg</a><br/>
 			and on digital scans available at the<br/>
-			<a href="https://books.google.co.uk/books?id=oPBaAAAAcAAJ">Google Books</a>.</p>
+			<a href="https://books.google.com/books?id=oPBaAAAAcAAJ">Google Books</a>.</p>
 			<p>The cover page is adapted from<br/>
 			<i epub:type="se:name.visual-art.painting">Grand Central Station</i>,<br/>
 			a painting completed in 1909 by<br/>
