--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -22,7 +22,7 @@
 			<b class="name">Al Haines</b><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/59893">Project Gutenberg</a><br/>
-			and on digital scans available at the<br/>
+			and on digital scans available at<br/>
 			<a href="https://books.google.com/books?id=oPBaAAAAcAAJ">Google Books</a>.</p>
 			<p>The cover page is adapted from<br/>
 			<i epub:type="se:name.visual-art.painting">Grand Central Station</i>,<br/>
