--- a/src/epub/text/loi.xhtml
+++ b/src/epub/text/loi.xhtml
@@ -12,7 +12,7 @@
 				<ol>
 					<li>
 						<p>
-							<a href="chapter-9.xhtml#illustration-1">A medicine bottle with two torn labels and incomplete text reading “<abbr class="name">C. A.</abbr> … <abbr>Esq.</abbr>, The mix … re as before. No. A.1152” on the first label and “Note This medicine has been dispensed by a fully qualified Chemist with the … to possible drugs … and is guaranteed … the wishes of … the Pres- … <abbr class="initialism">M.P.S.</abbr> … <abbr>St.</abbr> <abbr class="initialism">W.C.</abbr>” on the second.</a>
+							<a href="chapter-9.xhtml#illustration-1">A medicine bottle with two torn labels and incomplete text reading “<abbr class="name">C. A.</abbr>⁠ ⁠… <abbr>Esq.</abbr>, The mix⁠ ⁠… re as before. No. A.1152” on the first label and “Note This medicine has been dispensed by a fully qualified Chemist with the⁠ ⁠… to possible drugs⁠ ⁠… and is guaranteed⁠ ⁠… the wishes of⁠ ⁠… the Pres-⁠ ⁠… <abbr class="initialism">M.P.S.</abbr>⁠ ⁠… <abbr>St.</abbr> <abbr class="initialism">W.C.</abbr>” on the second.</a>
 						</p>
 					</li>
 				</ol>
