Update colophon to new template

--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -14,8 +14,8 @@
 			<p><i epub:type="se:name.publication.book">The Charing Cross Mystery</i><br/>
 			was published in 1923 by<br/>
 			<a href="https://en.wikipedia.org/wiki/J._S._Fletcher"><abbr class="name">J. S.</abbr> Fletcher</a>.</p>
-			<p>This ebook was produced for the<br/>
-			<a href="https://standardebooks.org">Standard Ebooks project</a><br/>
+			<p>This ebook was produced for<br/>
+			<a href="https://standardebooks.org">Standard Ebooks</a><br/>
 			by<br/>
 			<a href="https://github.org/michael-77">Michael Atkinson</a>,<br/>
 			and is based on a transcription produced in 2019 by<br/>
