--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -13,13 +13,13 @@
 			</header>
 			<p><i epub:type="se:name.publication.book">The Charing Cross Mystery</i><br/>
 			was published in 1923 by<br/>
-			<a href="https://en.wikipedia.org/wiki/J._S._Fletcher"><abbr class="name">J. S.</abbr> Fletcher</a>.</p>
+			<a href="https://en.wikipedia.org/wiki/J._S._Fletcher"><abbr epub:type="z3998:given-name">J. S.</abbr> Fletcher</a>.</p>
 			<p>This ebook was produced for<br/>
 			<a href="https://standardebooks.org">Standard Ebooks</a><br/>
 			by<br/>
 			<a href="https://github.org/michael-77">Michael Atkinson</a>,<br/>
 			and is based on a transcription produced in 2019 by<br/>
-			<b class="name">Al Haines</b><br/>
+			<b epub:type="z3998:personal-name">Al Haines</b><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/59893">Project Gutenberg</a><br/>
 			and on digital scans available at<br/>
