--- a/src/epub/text/loi.xhtml
+++ b/src/epub/text/loi.xhtml
@@ -6,17 +6,15 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="backmatter">
-		<section id="loi" epub:type="loi">
-			<nav epub:type="loi">
-				<h2 epub:type="title">List of Illustrations</h2>
-				<ol>
-					<li>
-						<p>
-							<a href="chapter-9.xhtml#illustration-1">A medicine bottle with two torn labels and incomplete text reading “<abbr epub:type="z3998:given-name">C. A.</abbr>⁠ ⁠… <abbr>Esq.</abbr>, The mix⁠ ⁠… re as before. No. A.1152” on the first label and “Note This medicine has been dispensed by a fully qualified Chemist with the⁠ ⁠… to possible drugs⁠ ⁠… and is guaranteed⁠ ⁠… the wishes of⁠ ⁠… the Pres-⁠ ⁠… <abbr epub:type="z3998:initialism">M.P.S.</abbr>⁠ ⁠… <abbr>St.</abbr> <abbr epub:type="z3998:initialism">W.C.</abbr>” on the second.</a>
-						</p>
-					</li>
-				</ol>
-			</nav>
-		</section>
+		<nav id="loi" epub:type="loi">
+			<h2 epub:type="title">List of Illustrations</h2>
+			<ol>
+				<li>
+					<p>
+						<a href="chapter-9.xhtml#illustration-1">A medicine bottle with two torn labels and incomplete text reading “<abbr epub:type="z3998:given-name">C. A.</abbr>⁠ ⁠… <abbr>Esq.</abbr>, The mix⁠ ⁠… re as before. No. A.1152” on the first label and “Note This medicine has been dispensed by a fully qualified Chemist with the⁠ ⁠… to possible drugs⁠ ⁠… and is guaranteed⁠ ⁠… the wishes of⁠ ⁠… the Pres-⁠ ⁠… <abbr epub:type="z3998:initialism">M.P.S.</abbr>⁠ ⁠… <abbr>St.</abbr> <abbr epub:type="z3998:initialism">W.C.</abbr>” on the second.</a>
+					</p>
+				</li>
+			</ol>
+		</nav>
 	</body>
 </html>
