--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -109,22 +109,10 @@
 			<h2 epub:type="title">Landmarks</h2>
 			<ol>
 				<li>
-					<a href="text/titlepage.xhtml" epub:type="frontmatter titlepage">Titlepage</a>
-				</li>
-				<li>
-					<a href="text/imprint.xhtml" epub:type="frontmatter imprint">Imprint</a>
-				</li>
-				<li>
-					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">The Charing Cross Mystery</a>
+					<a href="text/chapter-1.xhtml" epub:type="bodymatter">The Charing Cross Mystery</a>
 				</li>
 				<li>
 					<a href="text/loi.xhtml" epub:type="backmatter loi">List of Illustrations</a>
-				</li>
-				<li>
-					<a href="text/colophon.xhtml" epub:type="backmatter colophon">Colophon</a>
-				</li>
-				<li>
-					<a href="text/uncopyright.xhtml" epub:type="backmatter copyright-page">Uncopyright</a>
 				</li>
 			</ol>
 		</nav>
