--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -17,7 +17,7 @@
 			<p>This ebook was produced for<br/>
 			<a href="https://standardebooks.org/">Standard Ebooks</a><br/>
 			by<br/>
-			<a href="https://github.org/michael-77">Michael Atkinson</a>,<br/>
+			<a href="https://github.com/michael-77">Michael Atkinson</a>,<br/>
 			and is based on a transcription produced in 2019 by<br/>
 			<b epub:type="z3998:personal-name">Al Haines</b><br/>
 			for<br/>
